Releae WebRTCInternals::select_file_dialog_ when dialog dismissed

Before this fix, the DCHECK on line 370 was hit.

Bug: 817376
Change-Id: Ifd97fcb29e64f0ba3368521ae6e7bd37effc99c6
Reviewed-on: https://chromium-review.googlesource.com/941443
Reviewed-by: Guido Urdaneta <guidou@chromium.org>
Commit-Queue: Elad Alon <eladalon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539870}