content/browser/webrtc/webrtc_internals.cc
@@ -460,6 +460,7 @@ void WebRTCInternals::FileSelectionCanceled(void* params) {
     default:
       NOTREACHED();
   }
+  select_file_dialog_ = nullptr;
 #endif
 }
 
